@@ -45,7 +45,7 @@ exec bin/aurora-scheduler \
   -native_log_file_path=/var/db/aurora \
   -backup_dir=/var/lib/aurora/backups \
   -thermos_executor_path=$DIST_DIR/thermos_executor.pex \
-  -thermos_executor_flags="--announcer-enable --announcer-ensemble localhost:2181" \
+  -thermos_executor_flags="--announcer-ensemble localhost:2181" \
   -allowed_container_types=MESOS,DOCKER \
   -shiro_realm_modules=KERBEROS5_AUTHN,INI_AUTHNZ \
   -shiro_ini_path=/home/vagrant/aurora/src/test/resources/org/apache/aurora/scheduler/http/api/security/shiro-example.ini \
