@@ -40,7 +40,7 @@ exec bin/aurora-scheduler \
   -native_log_file_path=/var/db/aurora \
   -backup_dir=/var/lib/aurora/backups \
   -thermos_executor_path=$DIST_DIR/thermos_executor.pex \
-  -thermos_executor_flags="--announcer-enable --announcer-ensemble localhost:2181" \
+  -thermos_executor_flags="--announcer-ensemble localhost:2181" \
   -allowed_container_types=MESOS,DOCKER \
   -http_authentication_mechanism=BASIC \
   -use_beta_db_task_store=true \
